--- a/src/css/Rates.css
+++ b/src/css/Rates.css
@@ -1,37 +1,21 @@
 .form {
 	background-color: white;
 	text-align: center;
+	margin: 0 auto;
+	width:60%;
+	padding:10px 0px;
 }
+
+.table-conversion{
+width:50%;
+margin: 0 auto;
+}
+
 
 p {
 	margin-top: 0;
-	background-color: skyblue;
-	color: white;
+	background-color: rgb(240, 245, 250);
+	color: rgb(10, 20, 110);
 	padding: 10px;
 	font-size: 20px;
-}
-
-#base-p {
-	margin-bottom: 0;
-}
-
-input {
-	padding: 6px;
-	margin-right: 10px;
-	margin-bottom: 15px;
-}
-
-input[type="text"], input[type="submit"] {
-	background-color: yellow;
-}
-
-ul {
-	display: inline-block;
-	text-align: left;
-}
-
-ul li {
-	border: 1px solid black;
-	list-style-type: none;
-
 }
