--- a/src/app/App.css
+++ b/src/app/App.css
@@ -2,5 +2,10 @@ body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	background-color: #d9d8d1;
+	background: linear-gradient(133deg, rgba(120,250,246,1) 3%, rgba(144,26,233,1) 65%, rgba(26,207,233,1) 99%);
+}
+label{
+	font-weight:bold;
+	font-size:18px;
+
 }
